# Matchbox

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  api.py  backend.spec  backend_main.py  build.sh  pyproject.toml  run.sh  tmdb_engine.py
.github/workflows/: build-windows.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/electron/: main.cjs
frontend/src/: App.tsx  ThemeContext.ts  electron.d.ts  index.css
frontend/src/api/: client.ts
frontend/src/components/: LibraryPanel.tsx  MovieInfoPanel.tsx  Poster.tsx  RemuxModal.tsx  RenamePanel.tsx  SearchPanel.tsx  SettingsModal.tsx  ShowInfoPanel.tsx  SubtitleModal.tsx
